WIP: save ukr president data 2

--- a/demo_ukr_president.ipynb
+++ b/demo_ukr_president.ipynb
@@ -2,9 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Downloading package stopwords to /home/vasyl/nltk_data...\n",
+      "[nltk_data]   Package stopwords is already up-to-date!\n",
+      "[nltk_data] Downloading package punkt to /home/vasyl/nltk_data...\n",
+      "[nltk_data]   Package punkt is already up-to-date!\n",
+      "[nltk_data] Downloading package averaged_perceptron_tagger to\n",
+      "[nltk_data]     /home/vasyl/nltk_data...\n",
+      "[nltk_data]   Package averaged_perceptron_tagger is already up-to-\n",
+      "[nltk_data]       date!\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -13,8 +28,8 @@
     "from dateutil.relativedelta import relativedelta\n",
     "\n",
     "import numpy as np\n",
-    "# import matplotlib\n",
-    "# matplotlib.use(\"agg\")\n",
+    "import matplotlib\n",
+    "matplotlib.use(\"agg\")\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
     "import nltk\n",
@@ -53,9 +68,9 @@
     "        monthly_words_decomposition[key] = tmp\n",
     "    return pd.DataFrame.from_dict(monthly_words_decomposition)\n",
     "\n",
-    "def plot_word_correlation(arr_a, arr_b, word, save_name):\n",
+    "def plot_word_correlation(arr_a, arr_b, word, n_meet, corr_coef, save_name):\n",
     "    x = np.arange(1, 1 + len(arr_a))\n",
-    "    fig, (ax0, ax1) = plt.subplots(nrows=2, ncols=1, constrained_layout=True,figsize=(9, 9),dpi=150)\n",
+    "    fig, (ax0, ax1) = plt.subplots(nrows=2, ncols=1, constrained_layout=True,figsize=(16, 9),dpi=150)\n",
     "    \n",
     "    a = np.zeros_like(x)\n",
     "    a[-len(arr_a):] = arr_a\n",
@@ -68,7 +83,7 @@
     "    ax0.grid()\n",
     "\n",
     "    ax1.plot(x, b)\n",
-    "    ax1.set_title('Корінь \"'+ word + '\"')\n",
+    "    ax1.set_title('Трійка коренів \"'+ word + '\" зустрілася ' + str(n_meet) + ' разів; кореляція ' + str(corr_coef) + '%')\n",
     "    ax1.set_xticks(np.arange(0, max(x), 1))\n",
     "    ax1.grid()\n",
     "\n",
@@ -112,11 +127,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7f7e427e9cf8>"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "defenders_losses = pd.read_json('results/killed_defenders.json').applymap(get_year_month)\n",
     "# defenders_losses['https://uk.wikipedia.org'].value_counts().sort_index().to_csv('defenders.csv')\n",
@@ -125,11 +151,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7f7e427e9cf8>"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "ukr_president_data = pd.read_json('results/ukr_president_data.json')\n",
     "ukr_president_data.loc['datetime'].value_counts().to_csv('ukr_president_data.csv')\n",
@@ -138,9 +175,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([54, 94, 129, 81, 118, 143, 119, 112, 100, 106, 104, 125, 96],\n",
+       "      dtype=object)"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "monthly_ukr_president_data = group_monthly(ukr_president_data)\n",
     "monthly_ukr_president_data.loc['count'].to_numpy()"
@@ -148,11 +197,301 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th>2019-05</th>\n",
+       "      <th>2019-06</th>\n",
+       "      <th>2019-07</th>\n",
+       "      <th>2019-08</th>\n",
+       "      <th>2019-09</th>\n",
+       "      <th>2019-10</th>\n",
+       "      <th>2019-11</th>\n",
+       "      <th>2019-12</th>\n",
+       "      <th>2020-01</th>\n",
+       "      <th>2020-02</th>\n",
+       "      <th>2020-03</th>\n",
+       "      <th>2020-04</th>\n",
+       "      <th>2020-05</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>нас</th>\n",
+       "      <th>очен</th>\n",
+       "      <th>полезн</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>независим</th>\n",
+       "      <th>внешн</th>\n",
+       "      <th>финансов</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>что</th>\n",
+       "      <th>имел</th>\n",
+       "      <th>шанс</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>будет</th>\n",
+       "      <th>изменя</th>\n",
+       "      <th>комплектац</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>для</th>\n",
+       "      <th>поддержан</th>\n",
+       "      <th>форм</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <th>...</th>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>выдвинут</th>\n",
+       "      <th>пут</th>\n",
+       "      <th>праймериз</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>проход</th>\n",
+       "      <th>в</th>\n",
+       "      <th>вильнюс</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>продукт</th>\n",
+       "      <th>в</th>\n",
+       "      <th>буфет</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>собствен</th>\n",
+       "      <th>из</th>\n",
+       "      <th>фонд</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>люд</th>\n",
+       "      <th>и</th>\n",
+       "      <th>достижен</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>167202 rows × 13 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                2019-05  2019-06  2019-07  2019-08  2019-09  \\\n",
+       "нас       очен      полезн            0        0        0        0        0   \n",
+       "независим внешн     финансов          0        0        0        0        0   \n",
+       "что       имел      шанс              0        0        0        0        0   \n",
+       "будет     изменя    комплектац        0        0        1        0        0   \n",
+       "для       поддержан форм              0        0        0        0        0   \n",
+       "...                                 ...      ...      ...      ...      ...   \n",
+       "выдвинут  пут       праймериз         0        0        0        0        0   \n",
+       "проход    в         вильнюс           0        0        0        0        0   \n",
+       "продукт   в         буфет             0        0        0        0        0   \n",
+       "собствен  из        фонд              0        0        0        0        0   \n",
+       "люд       и         достижен          0        0        0        0        1   \n",
+       "\n",
+       "                                2019-10  2019-11  2019-12  2020-01  2020-02  \\\n",
+       "нас       очен      полезн            0        1        0        0        0   \n",
+       "независим внешн     финансов          0        0        0        1        0   \n",
+       "что       имел      шанс              0        0        0        1        0   \n",
+       "будет     изменя    комплектац        0        0        0        0        0   \n",
+       "для       поддержан форм              0        0        0        0        0   \n",
+       "...                                 ...      ...      ...      ...      ...   \n",
+       "выдвинут  пут       праймериз         0        0        0        0        0   \n",
+       "проход    в         вильнюс           0        1        0        0        0   \n",
+       "продукт   в         буфет             0        1        0        0        0   \n",
+       "собствен  из        фонд              0        0        0        0        0   \n",
+       "люд       и         достижен          0        0        0        0        0   \n",
+       "\n",
+       "                                2020-03  2020-04  2020-05  \n",
+       "нас       очен      полезн            0        0        0  \n",
+       "независим внешн     финансов          0        0        0  \n",
+       "что       имел      шанс              0        0        0  \n",
+       "будет     изменя    комплектац        0        0        0  \n",
+       "для       поддержан форм              0        1        0  \n",
+       "...                                 ...      ...      ...  \n",
+       "выдвинут  пут       праймериз         0        0        1  \n",
+       "проход    в         вильнюс           0        0        0  \n",
+       "продукт   в         буфет             0        0        0  \n",
+       "собствен  из        фонд              0        0        1  \n",
+       "люд       и         достижен          0        0        0  \n",
+       "\n",
+       "[167202 rows x 13 columns]"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "words_in_phrase = 3\n",
     "additional_punctuation = '«»'\n",
@@ -177,13 +516,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "13"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(header_monthly_words_decomposition.T)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "count_words = {}\n",
-    "defend_part = defend[-len(words):]\n",
     "defend = defenders_losses['https://uk.wikipedia.org'].value_counts().sort_index().to_numpy()\n",
+    "defend_part = defend[-len(header_monthly_words_decomposition.T):]\n",
     "for word in header_monthly_words_decomposition.T:\n",
     "    words = header_monthly_words_decomposition.loc[word].sort_index().to_numpy()\n",
     "    if sum(words) < 10:\n",
@@ -194,13 +553,13 @@
     "    )\n",
     "#     print(int(corr_tmp*100))\n",
     "    count_words[' '.join(word)] = {'sum': sum(words), 'max': corr_tmp.max()}\n",
-    "    sv_name = 'results/corr-{:0>3}_count-{:0>6}_root-{}.png'.format(\n",
-    "        abs(np.round(int(corr_tmp.max()*100))),\n",
+    "    sv_name = 'results/corr-{}_count-{:0>6}_root-{}.png'.format(\n",
+    "        '{:0>3}p'.format(abs(np.round(int(corr_tmp.max()*100)))) if corr_tmp > 0 else '{:0>3}n'.format(abs(np.round(int(corr_tmp.max()*100)))),\n",
     "        sum(words),\n",
     "        '_'.join(word).replace('/','_slash_')\n",
     "    )\n",
     "    \n",
-    "    plot_word_correlation(defend_part, words, '_'.join(word), sv_name)\n",
+    "    plot_word_correlation(defend_part, words, '_'.join(word), sum(words), np.round(int(corr_tmp.max()*100)), sv_name)\n",
     "count_words = pd.DataFrame.from_dict(count_words).T"
    ]
   },
