Improvements for stability and investigation

--- a/demo_analitycs.ipynb
+++ b/demo_analitycs.ipynb
@@ -167,9 +167,10 @@
    "source": [
     "# biwords\n",
     "additional_punctuation = '«»'\n",
+    "words_num = 3\n",
     "all_punct = string.punctuation + additional_punctuation\n",
     "monthly_header = monthly_kremlin.loc['content'].apply(\n",
-    "    lambda w: list(ngrams(nltk.word_tokenize(w.lower()), 1))\n",
+    "    lambda w: list(ngrams(nltk.word_tokenize(w.lower()), words_num))\n",
     ").to_dict()\n",
     "monthly_header_stemmed = {}\n",
     "ps = SnowballStemmer('russian')\n",
@@ -202,7 +203,10 @@
     "        Base=normalize(words),\n",
     "        part=normalize(defend)\n",
     "    )\n",
-    "    count_words[' '.join(word)] = {'sum': sum(words), 'max': corr_tmp.max(), 'min': corr_tmp.min()}\n",
+    "    count_words[' '.join(word)] = {'sum': sum(words),\n",
+    "                                   'max': corr_tmp.max(),\n",
+    "                                   'min': corr_tmp.min(),\n",
+    "                                   'date': header_monthly_words_decomposition.loc[word].T.idxmax()}\n",
     "#     sv_name = 'results/corr-{:0>3}_count-{:0>6}_root-{}.png'.format(\n",
     "#         np.round(int(corr_tmp.max()*100)),\n",
     "#         sum(words),\n",
@@ -219,7 +223,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "count_words.to_csv('results/01_words_corr_content_all.csv')"
+    "count_words.to_csv('results/03_words_corr_content_all.csv')"
    ]
   }
  ],
