--- a/demo_ukr_president.ipynb
+++ b/demo_ukr_president.ipynb
@@ -38,7 +38,7 @@
     "    dt_list = [dt.strftime(dt_min+relativedelta(months=+x), \"%Y-%m\") for x in range((dt_max.year-dt_min.year)*12+(dt_max.month-dt_min.month)+1)]\n",
     "    monthly_kremlin = {item:{'count': tmp.get(item, 0), 'header': '', 'content': ''} for item in dt_list}\n",
     "    for item in kremlin_data:\n",
-    "        monthly_kremlin[get_year_month(kremlin_data[item]['datetime'])]['header'] += ' ' + kremlin_data[item]['header']\n",
+    "        monthly_kremlin[get_year_month(kremlin_data[item]['datetime'])]['header'] += ' ' + str(kremlin_data[item]['header'])\n",
     "        monthly_kremlin[get_year_month(kremlin_data[item]['datetime'])]['content'] += ' ' + kremlin_data[item]['content']\n",
     "    \n",
     "    return pd.DataFrame.from_dict(monthly_kremlin)\n",
@@ -182,8 +182,8 @@
    "outputs": [],
    "source": [
     "count_words = {}\n",
-    "defend_part = defend[-len(words):]\n",
     "defend = defenders_losses['https://uk.wikipedia.org'].value_counts().sort_index().to_numpy()\n",
+    "defend_part = defend[-len(words):]\n",
     "for word in header_monthly_words_decomposition.T:\n",
     "    words = header_monthly_words_decomposition.loc[word].sort_index().to_numpy()\n",
     "    if sum(words) < 10:\n",
@@ -194,13 +194,13 @@
     "    )\n",
     "#     print(int(corr_tmp*100))\n",
     "    count_words[' '.join(word)] = {'sum': sum(words), 'max': corr_tmp.max()}\n",
-    "    sv_name = 'results/corr-{:0>3}_count-{:0>6}_root-{}.png'.format(\n",
-    "        abs(np.round(int(corr_tmp.max()*100))),\n",
-    "        sum(words),\n",
-    "        '_'.join(word).replace('/','_slash_')\n",
-    "    )\n",
+    "#     sv_name = 'results/corr-{:0>3}_count-{:0>6}_root-{}.png'.format(\n",
+    "#         abs(np.round(int(corr_tmp.max()*100))),\n",
+    "#         sum(words),\n",
+    "#         '_'.join(word).replace('/','_slash_')\n",
+    "#     )\n",
     "    \n",
-    "    plot_word_correlation(defend_part, words, '_'.join(word), sv_name)\n",
+    "#     plot_word_correlation(defend_part, words, '_'.join(word), sv_name)\n",
     "count_words = pd.DataFrame.from_dict(count_words).T"
    ]
   },
@@ -210,7 +210,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "count_words.to_csv('results/02_ukr_president_words_corr_content_10.csv')"
+    "count_words.to_csv('results/03_ukr_president_words_corr_content_10.csv')"
    ]
   }
  ],
