WIP: add MFA RF data collecting and analizing

--- a/demo_analitycs.ipynb
+++ b/demo_analitycs.ipynb
@@ -57,9 +57,9 @@
     "        monthly_words_decomposition[key] = tmp\n",
     "    return pd.DataFrame.from_dict(monthly_words_decomposition)\n",
     "\n",
-    "def plot_word_correlation(arr_a, arr_b, arr_corr, word, save_name):\n",
+    "def plot_word_correlation(arr_a, arr_b, arr_corr, max_date, corr_max_date, word, save_name):\n",
     "    x = np.arange(0., len(arr_b))/12\n",
-    "    fig, (ax0, ax1, ax2) = plt.subplots(nrows=3, ncols=1, constrained_layout=True,figsize=(9, 9),dpi=150)\n",
+    "    fig, (ax0, ax1, ax2) = plt.subplots(nrows=3, ncols=1, constrained_layout=True,figsize=(16, 9),dpi=150)\n",
     "    \n",
     "    a = np.zeros_like(x)\n",
     "    a[-len(arr_a):] = arr_a\n",
@@ -74,12 +74,15 @@
     "    ax0.grid()\n",
     "\n",
     "    ax1.plot(x, b)\n",
-    "    ax1.set_title('Корінь \"'+ word + '\"')\n",
+    "    ax1.set_title('Корінь \"'+ word + '\" зустрівся ' + str(sum(arr_b)) +\n",
+    "                  ' разів з максимумом в ' + str(max_date))\n",
     "    ax1.set_xticks(np.arange(0, max(x), 1))\n",
     "    ax1.grid()\n",
     "\n",
     "    ax2.plot(x, c)\n",
-    "    ax2.set_title('кореляційна функція')\n",
+    "    ax2.set_title('кореляційна функція має максимальне значення ' + \n",
+    "                  str(round(int(max(arr_corr)*100),2)) +\n",
+    "                  '% в ' + str(corr_max_date))\n",
     "    ax2.set_xticks(np.arange(0, max(x), 1))\n",
     "    ax2.grid()\n",
     "\n",
@@ -97,17 +100,17 @@
     "    if len(Base) == 0:\n",
     "        return 'Invalid input data'\n",
     "    else:\n",
-    "        tm = np.float128(0)\n",
-    "        ptmp = NormData(part)\n",
     "        Nn = len(part)\n",
-    "        res = np.zeros(len(Base)-Nn)\n",
-    "        for ii in range(len(Base)-Nn):\n",
-    "            tmp0 = NormData(Base[ii:ii + Nn])\n",
-    "            for jj in range(Nn):\n",
-    "                tm = tm + ptmp[jj]*tmp0[jj]\n",
-    "            res[ii] = tm / (Nn-1)\n",
-    "            tm = 0.0\n",
-    "        return res\n",
+    "        res = np.zeros(len(Base))\n",
+    "        for ii in range(len(Base)):\n",
+    "            if ii + Nn <= len(Base):\n",
+    "                tmpA = NormData(Base[ii:ii+Nn])\n",
+    "                tmpB = NormData(part)\n",
+    "            else:\n",
+    "                tmpA = NormData(Base[ii:])\n",
+    "                tmpB = NormData(part[:len(tmpA)])\n",
+    "            res[ii] = np.corrcoef(tmpA * tmpB)\n",
+    "        return np.nan_to_num(res)\n",
     "\n",
     "def fftCorr(Base = np.array(0), part = np.array(0)):\n",
     "    part0 = np.zeros(len(Base))\n",
@@ -118,7 +121,7 @@
     "    nP0sp = np.fft.fft(part0)\n",
     "    nBsp = nBsp * np.conj(nP0sp)\n",
     "    res = np.real(np.fft.ifft(nBsp))/len(part)\n",
-    "    return res[:-len(part)+1]"
+    "    return res[:]"
    ]
   },
   {
@@ -130,7 +133,7 @@
    "outputs": [],
    "source": [
     "defenders_losses = pd.read_json('results/killed_defenders.json').applymap(get_year_month)\n",
-    "defenders_losses['https://uk.wikipedia.org'].value_counts().sort_index().to_csv('defenders.csv')\n",
+    "defenders_losses['https://uk.wikipedia.org'].value_counts().sort_index().to_csv('results/defenders.csv')\n",
     "defenders_losses['https://uk.wikipedia.org'].value_counts().sort_index().plot.line()"
    ]
   },
@@ -143,7 +146,7 @@
    "outputs": [],
    "source": [
     "kremlin_data = pd.read_json('results/kremlin_data.json')\n",
-    "# kremlin_data.loc['datetime'].apply(lambda x: x[:7]).value_counts().to_csv('kremlin_freg.csv')\n",
+    "kremlin_data.loc['datetime'].apply(lambda x: x[:7]).value_counts().to_csv('results/kremlin_freg.csv')\n",
     "kremlin_data.loc['datetime'].apply(get_year_month).value_counts().sort_index().plot.line()"
    ]
   },
@@ -167,7 +170,7 @@
    "source": [
     "# biwords\n",
     "additional_punctuation = '«»'\n",
-    "words_num = 3\n",
+    "words_num = 1\n",
     "all_punct = string.punctuation + additional_punctuation\n",
     "monthly_header = monthly_kremlin.loc['content'].apply(\n",
     "    lambda w: list(ngrams(nltk.word_tokenize(w.lower()), words_num))\n",
@@ -193,27 +196,43 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "header_monthly_words_decomposition.to_csv('results/kremlin_1_root_dynamics.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "count_words = {}\n",
     "defend = defenders_losses['https://uk.wikipedia.org'].value_counts().sort_index().to_numpy()\n",
     "for word in header_monthly_words_decomposition.T:\n",
     "    words = header_monthly_words_decomposition.loc[word].sort_index().to_numpy()\n",
-    "#     if sum(words) < 30:\n",
-    "#         continue\n",
+    "    if sum(words) < 30:\n",
+    "        continue\n",
     "    corr_tmp = fftCorr(\n",
-    "        Base=normalize(words),\n",
-    "        part=normalize(defend)\n",
+    "        words,\n",
+    "        defend\n",
     "    )\n",
     "    count_words[' '.join(word)] = {'sum': sum(words),\n",
     "                                   'max': corr_tmp.max(),\n",
     "                                   'min': corr_tmp.min(),\n",
     "                                   'date': header_monthly_words_decomposition.loc[word].T.idxmax()}\n",
-    "#     sv_name = 'results/corr-{:0>3}_count-{:0>6}_root-{}.png'.format(\n",
-    "#         np.round(int(corr_tmp.max()*100)),\n",
-    "#         sum(words),\n",
-    "#         '_'.join(word)\n",
-    "#     )\n",
+    "#     print(str(header_monthly_words_decomposition.loc[word].T[corr_tmp.argmax()]))\n",
+    "    sv_name = 'results/roots_' + str(words_num) + '_corr-{:0>3}_count-{:0>6}_root-{}.png'.format(\n",
+    "        np.round(int(corr_tmp.max()*100)),\n",
+    "        sum(words),\n",
+    "        '_'.join(word)\n",
+    "    )\n",
     "    \n",
-    "#     plot_word_correlation(defend, words, corr_tmp, '_'.join(word), sv_name)\n",
+    "    plot_word_correlation(defend,\n",
+    "                          words,\n",
+    "                          corr_tmp,\n",
+    "                          header_monthly_words_decomposition.loc[word].T.idxmax(),\n",
+    "                          header_monthly_words_decomposition.T.index[corr_tmp.argmax()],\n",
+    "                          '_'.join(word),\n",
+    "                          sv_name)\n",
     "count_words = pd.DataFrame.from_dict(count_words).T"
    ]
   },
@@ -223,7 +242,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "header_monthly_words_decomposition.to_csv('results/01_words_corr_content_decomposition_all.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "count_words.to_csv('results/03_words_corr_content_all.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "monthly_kremlin"
    ]
   }
  ],
