--- a/demo_analitycs-mfa_rf.ipynb
+++ b/demo_analitycs-mfa_rf.ipynb
@@ -15,7 +15,8 @@
     "import numpy as np\n",
     "import matplotlib\n",
     "# matplotlib.use(\"agg\")\n",
-    "# import matplotlib.pyplot as plt\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
     "\n",
     "import nltk\n",
     "from nltk import word_tokenize\n",
@@ -26,20 +27,22 @@
     "nltk.download('averaged_perceptron_tagger')\n",
     "\n",
     "def get_year_month(date_time_str):\n",
-    "    return date_time_str[:10]\n",
+    "    return date_time_str[:7]\n",
     "\n",
     "def normalize(arr):\n",
     "    return (arr - np.mean(arr)) / np.std(arr) / np.sqrt(len(arr))\n",
     "\n",
     "def group_monthly(kremlin_data):\n",
-    "    tmp = kremlin_data.loc['datetime'].apply(lambda x: x[:10]).value_counts().to_dict()\n",
-    "    dt_min = dt.strptime(min(kremlin_data.loc['datetime'])[:10], '%Y-%m-%d')\n",
-    "    dt_max = dt.strptime(max(kremlin_data.loc['datetime'])[:10], '%Y-%m-%d')\n",
-    "    dt_list = [dt.strftime(dt_min+relativedelta(months=+x), \"%Y-%m-%d\") for x in range((dt_max.year-dt_min.year)*12+(dt_max.month-dt_min.month)+1)]\n",
-    "    monthly_kremlin = {item:{'count': tmp.get(item, 0), 'header': '', 'content': ''} for item in dt_list}\n",
+    "    tmp = kremlin_data.loc['datetime'].apply(lambda x: x[:7]).value_counts().to_dict()\n",
+    "    dt_min = dt.strptime(min(kremlin_data.loc['datetime'])[:7], '%Y-%m')\n",
+    "    dt_max = dt.strptime(max(kremlin_data.loc['datetime'])[:7], '%Y-%m')\n",
+    "    dt_list = [dt.strftime(dt_min+relativedelta(months=+x), \"%Y-%m\") for x in range((dt_max.year-dt_min.year)*12+(dt_max.month-dt_min.month)+1)]\n",
+    "    monthly_kremlin = {item:{'count': tmp.get(item, 0), 'header': '', 'document note': '', 'content': ''} for item in dt_list}\n",
+    "#     for item in tmp:\n",
+    "#         monthly_kremlin[item] = {'count': tmp[item], 'header': '', 'summary': '', 'content': ''}\n",
     "    for item in kremlin_data:\n",
-    "        monthly_kremlin[get_year_month(kremlin_data[item]['datetime'])]['header'] += ' ' + \\\n",
-    "            str(kremlin_data[item]['header']) if kremlin_data[item]['header'] else\n",
+    "        monthly_kremlin[get_year_month(kremlin_data[item]['datetime'])]['header'] += ' ' + str(kremlin_data[item]['header'])\n",
+    "        monthly_kremlin[get_year_month(kremlin_data[item]['datetime'])]['document note'] += ' ' + kremlin_data[item]['document note']\n",
     "        monthly_kremlin[get_year_month(kremlin_data[item]['datetime'])]['content'] += ' ' + kremlin_data[item]['content']\n",
     "    \n",
     "    return pd.DataFrame.from_dict(monthly_kremlin)\n",
@@ -97,17 +100,17 @@
     "    if len(Base) == 0:\n",
     "        return 'Invalid input data'\n",
     "    else:\n",
-    "        tm = np.float128(0)\n",
-    "        ptmp = NormData(part)\n",
     "        Nn = len(part)\n",
-    "        res = np.zeros(len(Base)-Nn)\n",
-    "        for ii in range(len(Base)-Nn):\n",
-    "            tmp0 = NormData(Base[ii:ii + Nn])\n",
-    "            for jj in range(Nn):\n",
-    "                tm = tm + ptmp[jj]*tmp0[jj]\n",
-    "            res[ii] = tm / (Nn-1)\n",
-    "            tm = 0.0\n",
-    "        return res\n",
+    "        res = np.zeros(len(Base))\n",
+    "        for ii in range(len(Base)):\n",
+    "            if ii + Nn <= len(Base):\n",
+    "                tmpA = NormData(Base[ii:ii+Nn])\n",
+    "                tmpB = NormData(part)\n",
+    "            else:\n",
+    "                tmpA = NormData(Base[ii:])\n",
+    "                tmpB = NormData(part[:len(tmpA)])\n",
+    "            res[ii] = np.corrcoef(tmpA * tmpB)\n",
+    "        return np.nan_to_num(res)\n",
     "\n",
     "def fftCorr(Base = np.array(0), part = np.array(0)):\n",
     "    part0 = np.zeros(len(Base))\n",
@@ -142,9 +145,9 @@
    },
    "outputs": [],
    "source": [
-    "ukr_president_data = pd.read_json('results/ukr_president_data.json')\n",
-    "ukr_president_data.loc['datetime'].value_counts().to_csv('ukr_president_data.csv')\n",
-    "ukr_president_data.loc['datetime'].apply(get_year_month).value_counts().sort_index().plot.line()"
+    "mfa_rf_data = pd.read_json('results/mfa_rf_data.json')\n",
+    "# mfa_rf_data.loc['datetime'].apply(lambda x: x[:7]).value_counts().to_csv('results/mfa_rf_freg.csv')\n",
+    "mfa_rf_data.loc['datetime'].apply(get_year_month).value_counts().sort_index().plot.line()"
    ]
   },
   {
@@ -153,8 +156,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "monthly_ukr_president_data = group_monthly(ukr_president_data)\n",
-    "monthly_ukr_president_data.loc['count'].to_numpy()"
+    "# mfa_rf_data\n",
+    "monthly_mfa_rf = group_monthly(mfa_rf_data)\n",
+    "monthly_mfa_rf.loc['count'].to_numpy().mean()"
    ]
   },
   {
@@ -165,25 +169,36 @@
    },
    "outputs": [],
    "source": [
-    "words_in_phrase = 1\n",
+    "# biwords\n",
     "additional_punctuation = '«»'\n",
+    "words_num = 3\n",
     "all_punct = string.punctuation + additional_punctuation\n",
-    "monthly_header = monthly_ukr_president_data.loc['content'].apply(\n",
-    "    lambda w: list(ngrams(nltk.word_tokenize(w.lower()), words_in_phrase))\n",
+    "monthly_mfa_rf_content = monthly_mfa_rf.loc['content'].apply(\n",
+    "    lambda w: list(ngrams(nltk.word_tokenize(w.lower()), words_num))\n",
     ").to_dict()\n",
-    "monthly_header_stemmed = {}\n",
+    "# monthly_mfa_rf_content\n",
+    "monthly_content_stemmed = {}\n",
     "ps = SnowballStemmer('russian')\n",
-    "for key in monthly_header:\n",
+    "for key in monthly_mfa_rf_content:\n",
     "    tmp = []\n",
-    "    for item in monthly_header[key]:\n",
+    "    for item in monthly_mfa_rf_content[key]:\n",
     "        if not any(val in all_punct for val in item):\n",
     "            tmp.append(tuple([ps.stem(word) for word in item]))\n",
-    "    monthly_header_stemmed[key] = tmp\n",
-    "header_monthly_words_decomposition = pd.DataFrame.sort_index(\n",
-    "    calculate_freq_per_month(monthly_header_stemmed),\n",
+    "    monthly_content_stemmed[key] = tmp\n",
+    "monthly_words_decomposition = pd.DataFrame.sort_index(\n",
+    "    calculate_freq_per_month(monthly_content_stemmed),\n",
     "    axis=1\n",
     ")\n",
-    "header_monthly_words_decomposition"
+    "monthly_words_decomposition"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "monthly_words_decomposition.to_csv('results/mfa_rf_3_root_dynamics.csv')#17321"
    ]
   },
   {
@@ -194,24 +209,32 @@
    "source": [
     "count_words = {}\n",
     "defend = defenders_losses['https://uk.wikipedia.org'].value_counts().sort_index().to_numpy()\n",
-    "defend_part = defend[-len(monthly_ukr_president_data.loc['count'].to_numpy()):]\n",
-    "for word in header_monthly_words_decomposition.T:\n",
-    "    words = header_monthly_words_decomposition.loc[word].sort_index().to_numpy()\n",
-    "#     if sum(words) < 10:\n",
-    "#         continue\n",
+    "for word in monthly_words_decomposition.T:\n",
+    "    words = monthly_words_decomposition.loc[word].sort_index().to_numpy()\n",
+    "    if sum(words) < 30:\n",
+    "        continue\n",
     "    corr_tmp = fftCorr(\n",
-    "        Base=normalize(words),\n",
-    "        part=normalize(defend_part)\n",
+    "        words,\n",
+    "        defend\n",
     "    )\n",
-    "#     print(int(corr_tmp*100))\n",
-    "    count_words[' '.join(word)] = {'sum': sum(words), 'max': corr_tmp.max()}\n",
-    "#     sv_name = 'results/corr-{:0>3}_count-{:0>6}_root-{}.png'.format(\n",
-    "#         abs(np.round(int(corr_tmp.max()*100))),\n",
-    "#         sum(words),\n",
-    "#         '_'.join(word).replace('/','_slash_')\n",
-    "#     )\n",
+    "    count_words[' '.join(word)] = {'sum': sum(words),\n",
+    "                                   'max': corr_tmp.max(),\n",
+    "                                   'min': corr_tmp.min(),\n",
+    "                                   'date': monthly_words_decomposition.loc[word].T.idxmax()}\n",
+    "#     print(str(header_monthly_words_decomposition.loc[word].T[corr_tmp.argmax()]))\n",
+    "    sv_name = 'results/mfa_rf_roots_' + str(words_num) + '_corr-{:0>3}_count-{:0>6}_root-{}.png'.format(\n",
+    "        np.round(int(corr_tmp.max()*100)),\n",
+    "        sum(words),\n",
+    "        '_'.join(word)\n",
+    "    )\n",
     "    \n",
-    "#     plot_word_correlation(defend_part, words, '_'.join(word), sv_name)\n",
+    "    plot_word_correlation(defend,\n",
+    "                          words,\n",
+    "                          corr_tmp,\n",
+    "                          monthly_words_decomposition.loc[word].T.idxmax(),\n",
+    "                          monthly_words_decomposition.T.index[corr_tmp.argmax()],\n",
+    "                          '_'.join(word),\n",
+    "                          sv_name)\n",
     "count_words = pd.DataFrame.from_dict(count_words).T"
    ]
   },
@@ -221,7 +244,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "count_words.to_csv('results/01_ukr_president_words_corr_content_all.csv')"
+    "header_monthly_words_decomposition.to_csv('results/01_words_corr_content_decomposition_all.csv')"
    ]
   },
   {
@@ -230,7 +253,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "header_monthly_words_decomposition.to_csv('results/01_words_ukrPrez_content_decomposition_all.csv')"
+    "count_words.to_csv('results/03_words_corr_content_all.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "monthly_kremlin"
    ]
   }
  ],
